--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <tr>
 <th> <h1> My Resume <h1></th></tr>
 <tr> <th align = "left"> <h2> Barsha Mondal </h2>
-<ul>
-<li> Email Address- abcabcabc@gmail.com </li>
-<li> Mobile Number - 0123456789 </li>
-</ul>
+
+ Email Address- abcabcabc@gmail.com </br>
+ Mobile Number - 0123456789 
+
 <h2> Personal Information : </h2>
 <ul>
 <li> Father Name : Uttam Mondal </li>
